stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_variant_payload_unclosed.snap
---
source: tests/fixtures.rs
assertion_line: 1275
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/variant_payload_unclosed.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/variant_payload_unclosed.ml:5:1]
 4 │   dbg("bad")
 5 │ }
   · ┬
   · ╰── expected `,` or `)` after variant constructor payload type
   ╰────
