stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_record_pattern_binding.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_record_pattern_binding.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate pattern binding
   ╭─[tests/fixtures/diagnostics/types/duplicate_record_pattern_binding.ml:6:32]
 5 │   dbg(match pair {
 6 │     pair { left: value, right: value } -> value,
   ·                                ──┬──
   ·                                  ╰── `value` is already bound by this pattern
 7 │     _ -> 0
   ╰────
  help: use a unique name for each binding in the pattern
