stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_function_return_mismatch.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/function_return_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × function return type does not match body
   ╭─[tests/fixtures/diagnostics/types/function_return_mismatch.ml:1:13]
 1 │ fn bad() -> i64 {
   ·             ─┬─
   ·              ╰── expected `i64`, but this function body has type `bool`
 2 │   true
   ╰────
  help: change the return annotation or the function body
