stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_branch_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_branch_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × if branches have different types
   ╭─[tests/fixtures/diagnostics/types/inference_branch_mismatch.ml:2:15]
 1 │ fn main() {
 2 │   let value = if true { 1 } else { "one" };
   ·               ─────────────┬────────────
   ·                            ╰── one branch has type `i64`, but another branch has type `String`
 3 │   println("unreachable")
   ╰────
  help: make both branches produce the same type
